--- a/style.css
+++ b/style.css
@@ -547,6 +547,7 @@ button {
     transition: .4s;
     height: 80px;
     //box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.08);
+    background-color: white;
 }
 
 #navigationBar_logo {
