--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h1 {
     font-family: var(--mainFont);
     color: var(--darkColour);
 
-    font-weight: 420;
+    font-weight: 450;
     font-size: 2.5rem;
     animation: 1s ease-out 0s 1 slideInFromLeft;
 }
@@ -303,6 +303,7 @@ button {
 #header_inner {
     width: 100%;
     max-width: 1200px;
+    position: relative;
 }
 
 #header-left {
@@ -310,36 +311,79 @@ button {
     overflow: hidden;
 }
 
-.testCircleWrapper {
-    height: 410px;
-    width: 100%;
+.anotherBox {
+    background-color: blue;
+    width: 200px;
+    height: 200px;
 
+    position: absolute;
+    z-index: 100;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 160px;
+    margin: auto;
+
+    width: 90%;
+}
+
+.anotherBox img {
+    background-color: green;
     position: relative;
-    overflow-x: hidden;
-    overflow-y: hidden;
+
+    width: 100%;
+    margin: 0 auto;
+}
+
+.testCircleWrapper {
+    position: absolute;
+    top: 0;
+    height: 400px;
+    width: 100%;
+    background-color: red;
+    z-index: 100;
 }
 
 .testCircle {
-    width: 700px;
-    height: 100%;
+    width: 800px;
+    height: 500px;
 
     position: absolute;
+    top: 0;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 
     border-bottom-right-radius: 50%;
     border-bottom-left-radius: 50%;
-    overflow: hidden;
 
     background-color: var(--lightColour);
     background-color: #F7F7F7;
+
+    overflow: hidden;
 }
 
-.testCircle img {
+.boxi {
+    width: 100%;
+
+    //position: absolute;
+    top: 0px;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    margin: auto;
+}
+
+.boxi img {
+    border-radius: 50%;
+    padding: 20px;
+}
+
+/**.testCircle img {
     object-fit: cover;
     width: 350px;
     height: 350px;
+
 
     position: absolute;
     right: 0;
@@ -351,19 +395,36 @@ button {
     border-radius: 50%;
 
     border: solid 3px white;
+}**/
 
+.testImgBox {
+
+    bottom: 30px;
+    margin: auto;
+
+    border-radius: 50%;
+
+    border: solid 3px white;
+    display: none;
 }
+
+.testImgBox img {
+    width: 90%;
+}
+
 
 .imgBox {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    width: 360px;
-    height: 360px;
-    margin: 40px auto 0 auto;
+    width: 100%;
+    margin: 20px auto 0 auto;
     position: relative;
+    padding: 25px;
+}
 
-    display: none;
+.imgBox img {
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
 }
 
 .darkCircle {
@@ -616,11 +677,11 @@ button {
 }
 
 .hamburgerMenuLine {
-    height: 2px;
-    width: 32px;
+    height: 3px;
+    width: 34px;
     background-color: rgba(23, 46, 96, 0.95);
-    border-radius: .75px;
-    margin: 4px auto;
+    border-radius: 3px;
+    margin: 3.5px auto;
 }
 
 
@@ -656,7 +717,7 @@ button {
 }
 
 .sectionWrapper {
-    padding: 2rem 2rem 4rem 2rem;
+    padding: 2rem 1.4rem 4rem 1.4rem;
 }
 
 .physioHelpsCards {
@@ -727,7 +788,7 @@ button {
     font-size: 1.3rem;
     color: var(--darkColour);
     //color: var(--ultraDarkColour);
-    margin-bottom: .4rem;
+    margin-bottom: .6rem;
     font-weight: 600;
     font-family: var(--mainFont);
     text-align: center;
