--- a/tablet.css
+++ b/tablet.css
@@ -4,9 +4,8 @@
 
 
     h1 {
-        font-size: 5rem;
-        line-height: 5rem;
-        font-weight: 400;
+        font-size: 4rem;
+        line-height: 4rem;
     }
 
     h2 {
@@ -149,6 +148,7 @@
         width: 100%;
         height: 100%;
         margin: 0;
+        padding: 0;
     }
 
     .darkCircle,
@@ -238,6 +238,10 @@
         margin: 0 auto;
     }
 
+    .justAButton {
+        margin: 2rem auto;
+    }
+
     #contact {
         display: flex;
     }
@@ -253,6 +257,7 @@
     .contactRight {
         width: 60%;
         max-width: 800px;
+        overflow: hidden;
     }
 
     .contactRight-cards {
