--- a/desktop.css
+++ b/desktop.css
@@ -298,15 +298,17 @@
         //background-color: rgba(23, 46, 96, 0.03);
 
         position: absolute;
-        right: 300px;
+        right: 230px;
         top: 5%;
         //margin-inline: auto;
+
+        display: none;
     }
 
     .header-leftBG2 {
         position: absolute;
         bottom: 5%;
-        left: 300px;
+        left: 230px;
         width: 400px;
         height: 400px;
         border-radius: 50%;
@@ -315,6 +317,8 @@
         position: absolute;
         //margin-inline: auto;
 
+
+        display: none;
     }
 
     .imgBox {
