--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 :root {
-    --primary: white;
+    --primary: #f8f8f8;
     --secondary: #f9f9f9;
     --mainColour: #0064b1;
     --darkColour: #172E60;
     --ultraDarkColour: #0b214f;
+    --ultraDarkColour: #021846;
+    --ultraDarkColour: #460202;
     --lightColour: #fcfcfc;
+    --textBorderColour: #000000;
     //--lightColour: #f5f5f7;
     //--lightColour: #f5fbff;
     --verylightColour: #E6F1FA;
@@ -19,7 +22,7 @@
     //--secondFont: "DM Sans", serif;
     //--mainFont: 'Josefin Sans', sans-serif;
     --contentWidth: 80%;
-    --maxWidth: 1250px;
+    --maxWidth: 1300px;
 }
 
 * {
@@ -53,8 +56,10 @@ h1 {
     color: var(--darkColour);
 
     font-weight: 450;
+    font-weight: 300;
     font-size: 2.5rem;
     animation: 1s ease-out 0s 1 slideInFromLeft;
+
 }
 
 h2 {
@@ -85,7 +90,7 @@ h4 {
 h5 {
     color: var(--darkColour);
     font-family: var(--mainFont);
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     font-weight: 500;
     text-align: left;
     margin-bottom: .3rem;
@@ -107,9 +112,12 @@ button {
     padding: .6rem 1.5rem;
     color: white;
     font-size: 1.1rem;
+    font-weight: 200;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+
+    display: block;
 }
 
 .justAButton {
@@ -287,6 +295,7 @@ button {
     position: relative;
     display: flex;
     flex-direction: column;
+    background-color: #fafafa;
 }
 
 #header {
@@ -302,7 +311,6 @@ button {
 
 #header_inner {
     width: 100%;
-    max-width: 1200px;
     position: relative;
 }
 
@@ -423,10 +431,6 @@ button {
     padding: 20px;
 }
 
-.imgBox img {
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
-}
-
 .darkCircle {
     width: 100%;
     height: 100%;
@@ -527,19 +531,37 @@ button {
     gap: .5rem;
 }
 
-.subTitle {}
+.titleSubtitle {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.subTitle {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.quote {
+    margin: 2rem 0;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 1.1rem;
+    color: #959595;
+}
 
 
 .subTitle p {
     font-weight: 500;
     font-size: 1.4rem;
-    color: rgba(128, 128, 128, 0.70);
+    color: var(--darkColour);
 }
 
 .line {
     background-color: var(--darkColour);
-    height: 3px;
-    width: 70px;
+    height: 2px;
+    width: 50px;
 }
 
 .moreButton {
@@ -594,6 +616,7 @@ button {
 
     background-color: var(--lightColour);
     background-color: #F7F7F7;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.05);
 }
 
 .navigationBar_inner {
@@ -693,7 +716,18 @@ button {
     position: relative;
     overflow: hidden;
     background-color: var(--lightColour);
+}
 
+.tast {
+    width: 800px;
+    padding: 20px;
+}
+
+
+.tast > p {
+    text-align: left;
+    width: 100%;
+    max-width: 100%;
 }
 
 .physioHelps {
@@ -913,13 +947,13 @@ button {
     margin: 0 auto;
     //height: 300px;
     position: relative;
-    //box-shadow: 0 2px 5px rgba(0, 0, 0, 0.31);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.31);
     cursor: pointer;
     overflow: hidden;
     width: 320px;
     height: 320px;
-    border-radius: 10px;
-    border: solid 1px var(--ultraDarkColour);
+    border-radius: 12px;
+    border: solid 1.5px var(--ultraDarkColour);
 }
 
 
@@ -936,7 +970,7 @@ button {
 .newLeistungen-cardText {
     //background-color: var(--ultraDarkColour);
     color: white;
-    background-color: rgba(11, 33, 79, 0.9);
+    background-color: var(--ultraDarkColour);
     font-family: var(--mainFont);
     font-weight: 400;
     position: absolute;
@@ -960,7 +994,7 @@ button {
 
 .newLeistungen-cardTextMouseover {
     transform: translateY(0);
-    background-color: rgba(11, 33, 79, 0.99);
+    background-color: var(--ultraDarkColour);
 }
 
 .newLeistungen-cardTextHeadline {
