--- a/tablet.css
+++ b/tablet.css
@@ -30,10 +30,6 @@
         margin: 0 auto;
     }
 
-    button {
-        margin: 20px auto 0 auto;
-    }
-
     .moreButton {
         margin: 0;
     }
@@ -64,9 +60,9 @@
         background-size: cover;
         //background-attachment: fixed;
         background-image: none;
-        height: 100vh;
-        min-height: 500px;
-        max-height: 800px;
+        //height: 100vh;
+        //min-height: 500px;
+        //max-height: 800px;
     }
 
 
@@ -136,6 +132,7 @@
         width: 100%;
         border-radius: 0;
         margin: 0;
+        object-position: -200px;
     }
 
     #header-right {
@@ -145,10 +142,11 @@
     }
 
     .imgBox {
-        width: 100%;
-        height: 100%;
+        //width: 95%;
+        //height: 95%;
         margin: 0;
         padding: 0;
+        //clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0 100%);
     }
 
     .darkCircle,
@@ -162,7 +160,6 @@
 
     #header_headlineWrapper h1 {
         text-align: left;
-        text-shadow: none;
         max-width: 450px;
     }
 
