--- a/tablet.css
+++ b/tablet.css
@@ -130,9 +130,9 @@
     #header-left img {
         height: 100%;
         width: 100%;
-        border-radius: 0;
         margin: 0;
         object-position: -200px;
+        border-radius: 0;
     }
 
     #header-right {
@@ -178,6 +178,29 @@
         display: block;
         display: none;
     }
+
+
+    #greetings {
+        display: flex;
+        width: 80%;
+        margin: 3rem auto;
+    }
+
+    .leftBox {
+        width: 50%;
+        padding: 50px;
+    }
+
+    .leftBox p {
+        text-align: left;
+    }
+
+    .rightBox {
+        width: 50%;
+        position: relative;
+    }
+
+
 
     #physioHelpsWrapper {
         display: flex;
