--- a/style.css
+++ b/style.css
@@ -64,9 +64,10 @@ h1 {
 h2 {
     font-family: var(--mainFont);
     color: var(--darkColour);
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 600;
     text-align: left;
+    margin: 5px 0;
 }
 
 h3 {
@@ -706,39 +707,6 @@ button {
     background-color: rgba(23, 46, 96, 0.95);
     border-radius: 3px;
     margin: 3.5px auto;
-}
-
-.pictureCard {
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
-    border: solid 1px var(--ultraDarkColour);
-    width: 300px;
-    height: 180px;
-    background-color: var(--darkColour);
-}
-
-.pictureCard img {
-    object-fit: cover;
-}
-
-.pictureCardOne {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0%);
-}
-
-.pictureCardTwo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-70%, -50%) rotate(-10deg);
-}
-
-.pictureCardThree {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-30%, 20%) rotate(5deg);
 }
 
 #physioHelpsWrapper {
@@ -1455,6 +1423,78 @@ button {
     font-weight: 400;
     text-align: left;
 }
+
+
+#rezensionen {
+    min-height: 10px;
+    padding: 4rem 5rem 8rem 5rem;
+    overflow: scroll;
+    display: flex;
+    gap: 5rem;
+}
+
+.rezension {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    /* prevents shrinking */
+    width: 550px;
+    background-color: #f8f8f8;
+    padding: 25px 30px;
+    float: left;
+    border-radius: 20px;
+
+    font-family: var(--mainFont);
+    line-height: 24px;
+
+}
+
+.rezension > div {
+    min-height: 10px;
+}
+
+.rezension-top {
+
+    display: flex;
+    justify-content: flex-end;
+    gap: 3px;
+}
+
+.sterne {
+    width: 28px;
+    height: 28px;
+}
+
+.rezension-middle {
+    position: relative;
+    margin: 20px auto;
+}
+
+.rezension-middle p {
+    position: relative;
+    z-index: 1;
+    text-align: left;
+    color: #414141;
+}
+
+.zitat {
+    position: absolute;
+    top: 30px;
+    left: -15px;
+
+    color: rgba(0, 0, 0, 0.06);
+
+    font-family: "BIZ UDPGothic", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 8rem;
+    z-index: 0;
+
+}
+
+.rezension-bottom {}
+
+
 
 .headlineWrapper {
     height: 55px;
