--- a/tablet.css
+++ b/tablet.css
@@ -182,20 +182,20 @@
 
     #greetings {
         display: flex;
-        width: 80%;
-        margin: 3rem auto;
+        width: 90%;
+        margin: 12rem auto;
     }
 
-    .leftBox {
+    .rightBox {
         width: 50%;
         padding: 50px;
     }
 
-    .leftBox p {
+    .rightBox p {
         text-align: left;
     }
 
-    .rightBox {
+    .leftBox {
         width: 50%;
         position: relative;
     }
