--- a/desktop.css
+++ b/desktop.css
@@ -140,11 +140,15 @@
     .newLeistungen {
         flex-direction: row;
         gap: 6rem;
-        padding: 0;
+        padding: 4rem 3rem;
+        margin: 3rem auto 8rem auto;
+
+        max-width: var(--maxWidth);
+        width: 90%;
     }
 
-    .newLeistungen-offGrid {
-        position: relative;
+    .newLeistungen button {
+        margin-top: 8px;
     }
 
     .newLeistungen h5 {
@@ -166,17 +170,33 @@
     .newLeistungen-card {
         width: 300px;
         height: 300px;
-        transform: translateY(50px);
     }
 
     .cardUp {
-        position: absolute;
-        top: -50px;
+        //position: absolute;
+        //top: -80px;
+        opacity: 0;
+        transform: translate(0, 100px);
+        transition: 1s;
+    }
+
+    .cardUp_show {
+        opacity: 1;
+        transform: translate(0, -80px);
     }
 
     .cardDown {
-        position: absolute;
-        bottom: -50px;
+        //position: absolute;
+        //bottom: -80px;
+
+        opacity: 0;
+        transform: translate(0, 180px);
+        transition: 1s;
+    }
+
+    .cardDown_show {
+        opacity: 1;
+        transform: translate(0, 80px);
     }
 
     .newLeistungen-cardText {
@@ -342,6 +362,11 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
+    }
+
+    #header-left img {
+        width: 100%;
+        height: 100%;
     }
 
 
@@ -927,7 +952,6 @@
     .backToTop {}
 
     .image-container {
-        background-color: red;
         height: 1000px;
         background-color: green;
     }
@@ -1022,6 +1046,5 @@
         bottom: 0;
         right: 0;
     }
-
 
 }
