--- a/tablet.css
+++ b/tablet.css
@@ -20,7 +20,7 @@
     }
 
     h5 {
-        font-size: 3rem;
+        font-size: 3.2rem;
         font-weight: 500;
         text-align: center;
     }
@@ -183,7 +183,8 @@
     #greetings {
         display: flex;
         width: 90%;
-        margin: 12rem auto;
+        max-width: 1500px;
+        margin: 4rem auto;
     }
 
     .rightBox {
@@ -240,7 +241,12 @@
         padding: 2rem 1.8rem 4rem 1.8rem;
     }
 
-    #newLeistungenWrapper {}
+    #newLeistungenWrapper {
+        //max-width: var(--maxWidth);
+        //margin: 0 auto;
+        padding: 0;
+        background-color: var(--lightColour);
+    }
 
     .newLeistungen {
         gap: 50px;
@@ -320,6 +326,46 @@
         grid-template-columns: auto auto;
         gap: 15px 30px;
         margin: .5rem 0 3rem 0;
+    }
+
+    #rezensionen {
+        min-height: 10px;
+        padding: 8rem 0rem 10rem 0rem;
+        display: flex;
+        gap: 5rem;
+
+    }
+
+    .rezension {
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 0;
+        /* prevents shrinking */
+        width: 550px;
+        padding: 25px 30px;
+        float: left;
+        border-radius: 20px;
+
+        font-family: var(--mainFont);
+        line-height: 24px;
+        transition: ease-out .1s;
+        text-decoration: none;
+    }
+
+    .rezension:hover {
+        transform: scale(1.03);
+        //box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .rezension > div {
+        min-height: 10px;
+    }
+
+    .rezension-top {
+
+        display: flex;
+        justify-content: flex-end;
+        gap: 3px;
     }
 
 
