--- a/style.css
+++ b/style.css
@@ -1434,7 +1434,7 @@ button {
     text-align: left;
 
 
-    color: inherit;
+    color: red;
     /* keep your default text color */
     text-decoration: none;
     /* remove underline if applied */
