--- a/tablet.css
+++ b/tablet.css
@@ -23,11 +23,21 @@
         font-size: 3.2rem;
         font-weight: 500;
         text-align: center;
+        margin-bottom: 1.2rem;
     }
 
     p {
         text-align: center;
         margin: 0 auto;
+        max-width: 800px;
+    }
+
+    section {
+        width: 100%;
+    }
+
+    button {
+        margin: 1.4rem 0 0 0;
     }
 
     .moreButton {
@@ -119,7 +129,6 @@
 
         display: flex;
         justify-content: space-between;
-        gap: 35px;
     }
 
     #header-left {
@@ -179,15 +188,28 @@
         display: none;
     }
 
+    .subTitle {
+        flex-direction: row;
+    }
 
     #greetings {
-        display: flex;
-        width: 90%;
+        width: 70%;
         max-width: 1500px;
         margin: 4rem auto;
     }
 
-    .rightBox {
+    #greetings p {
+        text-align: left;
+        width: 800px;
+    }
+
+    #greetings h2 {
+        width: 800px;
+        margin: 0 auto;
+        text-align: left;
+    }
+
+    #greetings .rightBox {
         width: 50%;
         padding: 50px;
     }
@@ -202,6 +224,57 @@
     }
 
 
+    .praxis {
+        display: flex;
+        width: 90%;
+        max-width: var(--maxWidth);
+        margin: 12rem auto 15rem auto;
+    }
+
+    .praxis h5,
+    .praxis p {
+        width: 100%;
+        text-align: left;
+    }
+
+    .praxis .left-container {
+        width: 50%;
+    }
+
+    .leftInner {
+        position: sticky;
+        top: 50%;
+        transform: translateY(-50%);
+        max-width: 500px;
+    }
+
+
+    .praxis .right-container {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        padding-top: 6rem;
+    }
+
+    .praxis img {
+        width: 420px;
+        height: 200px;
+        object-fit: cover;
+        margin: 10px 0;
+        border-radius: 10px;
+        border: solid 2px var(--ultraDarkColour);
+    }
+
+    .leftInner img {
+        border: none;
+        width: 2rem;
+        height: auto;
+        aspect-ratio: 1;
+        margin: 2rem 1rem;
+    }
 
     #physioHelpsWrapper {
         display: flex;
@@ -260,7 +333,6 @@
     .newLeistungenLeftInner {
         display: flex;
         flex-direction: column;
-        gap: 1.4rem;
 
         position: sticky;
         top: 8rem;
