--- a/style.css
+++ b/style.css
@@ -726,6 +726,20 @@ button {
     padding: 1.8rem;
 }
 
+.praxis {
+    display: flex;
+    flex-direction: column;
+
+    padding: 20px;
+}
+
+.moveTop img {
+    border: solid 1px red;
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
 
 #physioHelpsWrapper {
     //clip-path: polygon(100% 0, 100% 95%, 35% 100%, 0% 95%, 0 0);
