--- a/style.css
+++ b/style.css
@@ -738,6 +738,13 @@ button {
     width: 100%;
     height: 150px;
     object-fit: cover;
+
+    border-radius: 10px;
+    border: solid 2px var(--ultraDarkColour);
+}
+
+.icono {
+    display: none;
 }
 
 
