--- a/animations.css
+++ b/animations.css
@@ -17,16 +17,12 @@
     opacity: 0;
 }
 
-.moveRight {
-    opacity: 0;
-    transform: translate(100px);
-}
-
 .active {
     opacity: 1;
     transition: opacity .4s ease-out, transform .5s ease-out, background-color .1s linear;
     transform: translateY(0);
     transition-delay: 0s;
+    transition: 1.5s;
 }
 
 .rotateOpacitySel {
