--- a/style.css
+++ b/style.css
@@ -731,6 +731,8 @@ button {
     flex-direction: column;
 
     padding: 20px;
+
+    display: none;
 }
 
 .moveTop img {
@@ -1063,6 +1065,7 @@ button {
     background-color: white;
     width: 50px;
     height: 50px;
+    display: none;
 }
 
 .iconi img {
@@ -1310,7 +1313,7 @@ button {
 .backToTop {
     color: white;
     position: fixed;
-    bottom: 20px;
+    bottom: 60px;
     right: -50px;
     z-index: 100;
     border-radius: 4px;
