--- a/tablet.css
+++ b/tablet.css
@@ -29,7 +29,6 @@
     p {
         text-align: center;
         margin: 0 auto;
-        max-width: 800px;
     }
 
     section {
@@ -196,7 +195,6 @@
         width: 70%;
         max-width: 1500px;
         margin: 4rem auto;
-        padding: 5rem;
         background-color: var(--lightColour: #f8f8f8);
     }
 
@@ -227,11 +225,38 @@
 
 
     .praxis {
+        position: relative;
         display: flex;
         flex-direction: row-reverse;
         width: 90%;
         max-width: var(--maxWidth);
-        margin: 8rem auto;
+        margin: 15rem auto;
+        gap: 3rem;
+    }
+
+    .praxisBackground {
+        //background-color: var(--lightColour);
+        //clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);
+        background-image: url("src/diagonal-thin-dark.png");
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 50%;
+        height: 120%;
+    }
+
+
+    .adresse {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        margin-top: 1.2rem;
+    }
+
+    .adresse p {
+        color: var(--ultraDarkColour);
+        font-weight: 500;
+        font-size: 1.1rem;
     }
 
     .icono {
@@ -246,14 +271,13 @@
     }
 
     .praxis .left-container {
-        width: 50%;
+        //width: 50%;
+        position: relative;
+        width: 100%;
+        //transform: translateY(-50%);
     }
 
     .leftInner {
-        //position: sticky;
-        //top: 50%;
-        //transform: translateY(-50%);
-        //max-width: 500px;
 
 
         //transition: 1s;
@@ -261,25 +285,28 @@
         //transform: translateX(-520px);
 
         position: sticky;
-        /* Stays visible while scrolling */
-        top: 50px;
-        left: 0;
-        width: 100px;
-        height: 100px;
-        background: cornflowerblue;
-        border-radius: 12px;
-        transition: transform 0.05s linear;
+        top: 25vh;
+        max-width: 600px;
+        padding: 1rem;
     }
 
 
     .praxis .right-container {
-        width: 50%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
-        margin-top: 18rem;
+        width: 100%;
+        gap: 1rem;
+    }
+
+    .right-container img {
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.18);
+    }
+
+    .toTheSide {
+        margin-left: 8rem;
     }
 
     .praxis img {
@@ -293,10 +320,9 @@
 
     .leftInner img {
         border: none;
-        width: 2rem;
+        width: 1.8rem;
         height: auto;
         aspect-ratio: 1;
-        margin-top: 1.2rem;
     }
 
     #physioHelpsWrapper {
